--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "handlebars": "^4.7.7",
     "mysql2": "^2.0.1",
+    "seed": "^0.4.4",
     "sequelize": "^5.21.2"
   }
 }
